# harvex

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
config/: default.toml
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs  main.rs  state.rs
crates/api/src/routes/: batch.rs  document.rs  export.rs  extraction.rs  health.rs  mod.rs  model.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  migrations.rs  models.rs  pool.rs
crates/services/: Cargo.toml
crates/services/src/: export.rs  lib.rs
crates/services/src/dao/: batch.rs  document.rs  extraction.rs  mod.rs
crates/services/src/llm/: engine.rs  mod.rs  prompts.rs
crates/services/src/pipeline/: detector.rs  excel.rs  mod.rs  ocr.rs  orchestrator.rs  pdf.rs  pdf_render.rs  word.rs
crates/tests/: Cargo.toml
crates/tests/src/: api_tests.rs  dao_tests.rs  helpers.rs  lib.rs
files/: entrypoint.sh  nginx-pod.conf
k8s/: deployment.yml  namespace.yml
scripts/: build-image.sh  deploy.sh  redeploy.sh  setup-dns.sh  setup-nginx.sh  setup-tls.sh
ui/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
ui/e2e/fixtures/: api-mock.ts  mock-data.ts
ui/e2e/tests/: batch-detail.spec.ts  dashboard.spec.ts  navigation.spec.ts  settings.spec.ts  upload.spec.ts
ui/src/: App.vue
ui/src/api/: client.ts
ui/src/components/: BatchProgress.vue  ExtractionCard.vue  FileDropZone.vue  ModelSelector.vue
ui/src/composables/: useSnackbar.ts
ui/src/plugins/: vuetify.ts
ui/src/router/: index.ts
ui/src/stores/: batches.ts  documents.ts  extractions.ts  models.ts
ui/src/views/: BatchDetail.vue  Dashboard.vue  Settings.vue  Upload.vue
