[package]
name = "harvex-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "harvex"
path = "src/main.rs"

[dependencies]
harvex-config = { path = "../config" }
harvex-db = { path = "../db" }
harvex-services = { path = "../services" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
nanoid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
duckdb = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
