[package]
name = "harvex-services"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
harvex-config = { path = "../config" }
harvex-db = { path = "../db" }
duckdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nanoid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rust_xlsxwriter = { workspace = true }
