[package]
name = "harvex-services"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
harvex-config = { path = "../config" }
harvex-db = { path = "../db" }
duckdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nanoid = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rust_xlsxwriter = { workspace = true }
calamine = { workspace = true }
pdf-extract = { workspace = true }
image = { workspace = true }
zip = { workspace = true }
mime_guess = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
tempfile = { workspace = true }
